--- a/package.json
+++ b/package.json
@@ -4,8 +4,9 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "nodemon server/app.js"
+    "test": "mocha server/**/*.test.js",
+    "start": "nodemon server/app.js",
+    "test-watch": "nodemon --exec 'npm test'"
   },
   "author": "",
   "license": "ISC",
@@ -19,6 +20,7 @@
     "expect": "^23.4.0",
     "jest": "^23.4.1",
     "supertest": "^3.1.0",
-    "tobe": "0.0.2"
+    "tobe": "0.0.2",
+    "mocha": "^3.0.2"
   }
 }
