--- a/package.json
+++ b/package.json
@@ -5,8 +5,11 @@
   "main": "index.js",
   "scripts": {
     "test": "mocha server/**/*.test.js",
-    "start": "nodemon server/app.js",
+    "start": "node server/app.js",
     "test-watch": "nodemon --exec 'npm test'"
+  },
+  "engines" : {
+    "node" : "v8.10.0"
   },
   "author": "",
   "license": "ISC",
