add PATCH /todos/:id

--- a/package.json
+++ b/package.json
@@ -8,14 +8,15 @@
     "start": "node server/app.js",
     "test-watch": "nodemon --exec 'npm test'"
   },
-  "engines" : {
-    "node" : "v8.10.0"
+  "engines": {
+    "node": "v8.10.0"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
     "body-parser": "^1.18.3",
     "express": "^4.16.3",
+    "lodash": "^4.17.10",
     "mongodb": "^3.1.1",
     "mongoose": "^5.2.4"
   },
